# allabiografer.se

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  fly.toml  mise.toml  pyproject.toml
.github/workflows/: ci.yml  parse.yml
data/: screenings.csv
data/movies/: 1000837.json  1005280.json  10098.json  101.json  1013052.json  1013600.json  10149.json  10159.json  1016024.json  1018.json  1019206.json  1019411.json  1022789.json  1033148.json  1037264.json  10373.json  1043197.json  1045770.json  10494.json  1054867.json  10633.json  1066883.json  10669.json  10681.json  1073112.json  1073889.json  1073956.json  1075.json  1075966.json  1075971.json  1081003.json  1081196.json  1083381.json  1083746.json  1084242.json  1084244.json  10843.json  1087205.json  1088548.json  10895.json  (+796 more)
data/venues/Alafors/: Ale Medborgarhusets Bio.json
data/venues/Alingsås/: Saga Alingsås.json
data/venues/Alsterbro/: Alsterbro Folkets Hus.json
data/venues/Alunda/: Stavby Bio.json
data/venues/Alvesta/: Alvesta Bio Thalia.json
data/venues/Ambjörby/: Ambjörby Bio Nordvärmland.json
data/venues/Angered/: Göteborg Angereds Bio.json
data/venues/Arboga/: Arboga Bio OLD.json  Arboga Bio.json
data/venues/Arbrå/: Arbrå Saga Bio.json
data/venues/Arjeplog/: Arjeplog Centrumbion.json
data/venues/Arvidsjaur/: Arvidsjaur Medborgarhusets Bio.json
data/venues/Berga/: Berga Bio.json
etc/goaccess/: goaccess.conf
etc/nginx/: nginx.conf
src/parse/: __init__.py  _util.py  tmdb.py
src/store/: __init__.py  movie.py  screening.py  venue.py
static/i/: style.css
(+381 files in other folders)
